# src/subject/core/router/subject.router.js
@@ -4,4 +4,5 @@ const auth = require('../../../../middleware/auth.middleware')
 const isAdmin = require('../../../../middleware/isAdmin.middleware')
 router.post('/link-student-to-subject', [auth, isAdmin], subjectController.linkStudent)
 router.post('/create', [auth, isAdmin], subjectController.createSubject)
+router.get('/list', auth, subjectController.subjectList)
 module.exports = router
